--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="CSS/style.css">
    </head>
    <body>
+    <script src="bc-finder/bcfscripts.js"></script>    
    <div class="wrapper">
       <header>
       <div class="container">
