--- a/findparty.html
+++ b/findparty.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="CSS/style.css">
    </head>
    <body>
+	   <script src="bc-finder/bcfscripts.js"></script>	   
    <div class="wrapper">
       <header>
 
@@ -152,11 +153,6 @@
 <input type="submit" value="Submit">
 <input type="reset" value="Reset" onclick="resetFunction()">
 </div>
-<script>
-function resetFunction(){
-document.getElementById("playerinputform").reset();
-}
-</script>
   </div>
 </div>
      <footer>
