--- a/findparty.html
+++ b/findparty.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="CSS/style.css">
    </head>
    <body>
-	   <script type="text/javascript" src="bc-finder/bcfscripts.js"></script>	   
+	   <script type="text/javascript" src="/bcfscripts.js"></script>	   
    <div class="wrapper">
       <header>
 
