--- a/findparty.html
+++ b/findparty.html
@@ -151,7 +151,8 @@
 </form>
 <div class="submitter">
 <input type="submit" value="Submit">
-<input type="reset" value="Reset" onclick="resetFunction()">
+<input type="reset" value="Reset" onclick="<script type="text/javascript">
+resetFunction()</script>">
 </div>
   </div>
 </div>
