--- a/findparty.html
+++ b/findparty.html
@@ -151,8 +151,7 @@
 </form>
 <div class="submitter">
 <input type="submit" value="Submit">
-<input type="reset" value="Reset" onclick="<script type="text/javascript">
-resetFunction()</script>">
+<input type="reset" value="Reset" onclick="resetFunction();">
 </div>
   </div>
 </div>
