--- a/findparty.html
+++ b/findparty.html
@@ -9,7 +9,7 @@
       <meta name="author" content="Joseph Carswell">
       <title>BattleCup Group Finder</title>
       <link rel="stylesheet" href="CSS/style.css">
-      <script type="text/javascript" src="bcfscripts.js"></script>   
+      <script type="text/javascript" src="bc-finder/bcfscripts.js"></script>    
    </head>
    <body>	   
    <div class="wrapper">
