--- a/findparty.html
+++ b/findparty.html
@@ -152,7 +152,7 @@
 </form>
 <div class="submitter">
 <input type="submit" value="Submit">
-<input type="reset" value="Reset" onclick="resetFunction();">
+<input type="reset" value="Reset" onclick="resetFunction()">
 </div>
   </div>
 </div>
