--- a/findparty.html
+++ b/findparty.html
@@ -12,7 +12,7 @@
        
    </head>
    <body>
-<script type="text/javascript" src="bcfscripts.js"></script>	   
+<script type="text/javascript" src="bc-finder/bcfscripts.js"></script>	   
    <div class="wrapper">
       <header>
 
