--- a/findplayers.html
+++ b/findplayers.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="CSS/style.css">
    </head>
    <body>
+   <script src="bcfscripts.js"></script>      
    <div class="wrapper">
       <header>
 
@@ -108,11 +109,7 @@
 <input type="submit" value="Submit">
 <input type="reset" value="Reset" onclick="resetFunction()">
 </div>
-<script>
-function resetFunction(){
-document.getElementById("playerinputform").reset();
-}
-</script>
+		    
   </div>
 </div>
      <footer>
