--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
       <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
       <meta name="author" content="Joseph Carswell">
       <title>BattleCup Group Finder</title>
-      <link rel="stylesheet" href="CSS/style.css">
+      <link rel="stylesheet" href="./css/style.css">
    </head>
    <body>
-    <script src="bc-finder/bcfscripts.js"></script>    
    <div class="wrapper">
       <header>
       <div class="container">
