--- a/findparty.html
+++ b/findparty.html
@@ -8,7 +8,7 @@
       <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
       <meta name="author" content="Joseph Carswell">
       <title>BattleCup Group Finder</title>
-      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="css/style.css">
       <script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
    </head>
    <body>
