--- a/results.html
+++ b/results.html
@@ -8,7 +8,7 @@
           <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
           <meta name="author" content="Joseph Carswell">
           <title>BattleCup Group Finder</title>
-          <link rel="stylesheet" href="CSS/style.css">
+          <link rel="stylesheet" href="./css/style.css">
        </head>
        <div class="wrapper">
           <header>
@@ -31,8 +31,10 @@
           <script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
           <script src="bcfscripts.js"></script>
 
+
+
 <script>
-window.printData();
+window.printData(gotAllData);
 </script>
 
 <p id="myLink">
@@ -40,6 +42,7 @@ window.printData();
           <ul id="playerlist">
 
           </ul>
+
 
 
           </p>
