--- a/findplayers.html
+++ b/findplayers.html
@@ -97,6 +97,15 @@
 </span>
 </div>
 
+          <div id="tableID">
+          <table id="resultsTable" align="center">
+
+
+              <tr></tr>
+          </table>
+          <br>
+          </div>
+
 <!--<div class="prefvoice">-->
 <!--<p>Method of Communication:</p>-->
 <!--<section id="logo1"><label>-->
@@ -111,7 +120,7 @@
 
 </form>
 <div class="submitter">
-    <input type="submit" value="Submit" id="searcher" onclick="search()">
+    <input type="submit" value="Search" id="searcher" onclick="search()">
 <input type="reset" value="Reset" id="reseter" onclick="resetFunction()">
 </div>
   </div>
