--- a/findparty.html
+++ b/findparty.html
@@ -126,11 +126,11 @@
 <div class="groupedwrap">
 <div class="groupedwith">
 <p> Number of players with you: </p>
-<select name="playercount" id="playercount" onkeydown = "test()">
- <option value="0" onclick="zeroSelect()">0</option>0</option>
- <option value="1" onclick="oneSelect()">1</option>
- <option value="2" onclick="twoSelect()">2</option>
- <option value="3" onclick="threeSelect()">3</option>
+<select name="playercount" id="playercount" onChange="display_div(this.selectedIndex);">
+ <option value="0">0</option>0</option>
+ <option value="1">1</option>
+ <option value="2">2</option>
+ <option value="3">3</option>
 </select>
 </div>
 
