--- a/findparty.html
+++ b/findparty.html
@@ -8,7 +8,7 @@
       <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
       <meta name="author" content="Joseph Carswell">
       <title>BattleCup Group Finder</title>
-      <link rel="stylesheet" href="CSS/style.css">
+      <link rel="stylesheet" href="./css/style.css">
       <script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
    </head>
    <body>
@@ -83,23 +83,23 @@
 
 <div class="positionselect">
 <span class="position1">
-	<input type="radio" name="position" id="position1" value="position1"/>
+	<input type="radio" name="position" id="position1" value="Carry"/>
 	<label for="position1">1. Carry</label>
 </span>
 <span class="position2">
-	<input type="radio" name="position" id="position2" value="position2"/>
+	<input type="radio" name="position" id="position2" value="Mid"/>
 	<label for="position2">2. Mid</label>
 </span>
 <span class="position3">
-	<input type="radio" name="position" id="position3" value="position3"/>
+	<input type="radio" name="position" id="position3" value="Offlane"/>
 	<label for="position3">3. Offlane</label>
 </span>
 <span class="position4">
-	<input type="radio" name="position" id="position4" value="position4"/>
+	<input type="radio" name="position" id="position4" value="Roamer / Support"/>
 	<label for="position4">4. Roamer / Support</label>
 </span>
 <span class="position5">
-	<input type="radio" name="position" id="position5" value="position5"/>
+	<input type="radio" name="position" id="position5" value="Support"/>
 	<label for="position5">5. Support</label>
 </span>
 </div>
