--- a/results.html
+++ b/results.html
@@ -8,7 +8,7 @@
           <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
           <meta name="author" content="Joseph Carswell">
           <title>BattleCup Group Finder</title>
-          <link rel="stylesheet" href="CSS/style.css">
+          <link rel="stylesheet" href="./css/style.css">
        </head>
        <div class="wrapper">
           <header>
@@ -26,7 +26,6 @@
           </header>
 
           <div class="mainresults">
-          <body>
 
           <script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
           <script src="bcfscripts.js"></script>
@@ -39,18 +38,19 @@ window.printData(gotAllData);
 
 <p id="myLink">
 
+          <div>
           <ul id="playerlist">
 
           </ul>
 
 
-
+          </div>
           </p>
 
 
 
 
-          </body>
+
         </div>
          <footer>
          <p>Battle Cup Group Finder created by PointB1ank - 2017</p>
