--- a/findplayers.html
+++ b/findplayers.html
@@ -8,9 +8,8 @@
       <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
       <meta name="author" content="Joseph Carswell">
       <title>BattleCup Group Finder</title>
-      <link rel="stylesheet" href="CSS/style.css">
+      <link rel="stylesheet" href="./css/style.css">
        <script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
-
 
 
    </head>
