--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="keybords" content="battlecup, battle, cup, weekly, group, finder, search, players, party, dota 2">
       <meta name="author" content="Joseph Carswell">
       <title>BattleCup Group Finder</title>
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="CSS/style.css">
    </head>
    <body>
    <div class="wrapper">
@@ -35,10 +35,10 @@
     <div class="buttonwrap">
     <section id="buttons">
     <span class="button1">
-        <a href="./findplayers.html"><img src="./img/findplayerbutton.png"></a>
+        <a href="./findplayers.html"><img src="img/findplayerbutton.png"></a>
     </span>
     <span class="button2">
-        <a href="./findparty.html"><img src="./img/findpartybutton.png"></a>
+        <a href="./findparty.html"><img src="img/findpartybutton.png"></a>
     </span>
     </section>
     </div>
