--- a/findparty.html
+++ b/findparty.html
@@ -83,23 +83,23 @@
 
 <div class="positionselect">
 <span class="position1">
-	<input type="radio" name="position" id="position1" value="Carry"/>
+	<input type="radio" name="position" id="position1" value="position1"/>
 	<label for="position1">1. Carry</label>
 </span>
 <span class="position2">
-	<input type="radio" name="position" id="position2" value="Mid"/>
+	<input type="radio" name="position" id="position2" value="position2"/>
 	<label for="position2">2. Mid</label>
 </span>
 <span class="position3">
-	<input type="radio" name="position" id="position3" value="Offlane"/>
+	<input type="radio" name="position" id="position3" value="position3"/>
 	<label for="position3">3. Offlane</label>
 </span>
 <span class="position4">
-	<input type="radio" name="position" id="position4" value="Roamer / Support"/>
+	<input type="radio" name="position" id="position4" value="position4"/>
 	<label for="position4">4. Roamer / Support</label>
 </span>
 <span class="position5">
-	<input type="radio" name="position" id="position5" value="Support"/>
+	<input type="radio" name="position" id="position5" value="position5"/>
 	<label for="position5">5. Support</label>
 </span>
 </div>
